publish: Update sprockets, cut version 2.3.1
generated from commit de496848c1e7b7116371ae25944aced1c22c47a9

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <div class="dark-box"></div>
       <div class="content">
         <h1 id='daindian-api'>Daindian API 介紹</h1>
-<p>這是 Diandian API 使用文件手冊，開放給 POS 整合專用</p>
+<p>這是 ImVIP API 使用文件手冊，開放給 POS 整合專用</p>
 <h1 id='be4b12af8a'>認證</h1>
 <blockquote>
 <p>認證的使用方式</p>
