--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <script src="javascripts/all.js"></script>
   </head>
 
-  <body class="index" data-languages="[&quot;shell&quot;,&quot;ruby&quot;,&quot;python&quot;,&quot;javascript&quot;]">
+  <body class="index" data-languages="[&quot;ruby&quot;,&quot;python&quot;,&quot;javascript&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -211,7 +211,6 @@
     <div class="toc-wrapper">
       <img src="images/logo.png" class="logo" alt="Logo" />
         <div class="lang-selector">
-              <a href="#" data-language-name="shell">shell</a>
               <a href="#" data-language-name="ruby">ruby</a>
               <a href="#" data-language-name="python">python</a>
               <a href="#" data-language-name="javascript">javascript</a>
@@ -282,12 +281,7 @@
 </blockquote>
 <pre class="highlight ruby tab-ruby"><code>
 </code></pre><pre class="highlight javascript tab-javascript"><code>
-</code></pre>
-<blockquote>
-<p>TODO
-TODO</p>
-</blockquote>
-<h3 id='http-request'>HTTP Request</h3>
+</code></pre><h3 id='http-request'>HTTP Request</h3>
 <p><code>POST http://api.imvip.io:9002/login</code></p>
 <h3 id='data'>data</h3>
 <table><thead>
@@ -326,11 +320,7 @@ TODO</p>
 <aside class="notice">
  請注意，access_token 在每一個 request 都必須放置在 header 一起送出，否則認證則會失敗
 </aside>
-<h1 id='60393335eb'>取得活動設定</h1><pre class="highlight ruby tab-ruby"><code>
-</code></pre><pre class="highlight python tab-python"><code>
-</code></pre><pre class="highlight shell tab-shell"><code>
-</code></pre><pre class="highlight javascript tab-javascript"><code>
-<span class="nx">$</span><span class="p">.</span><span class="nx">post</span><span class="p">(</span><span class="s1">'http://api.imvip.io:9002/login'</span><span class="p">,</span> <span class="p">{</span>
+<h1 id='60393335eb'>取得活動設定</h1><pre class="highlight javascript tab-javascript"><code><span class="nx">$</span><span class="p">.</span><span class="nx">post</span><span class="p">(</span><span class="s1">'http://api.imvip.io:9002/login'</span><span class="p">,</span> <span class="p">{</span>
     <span class="na">username</span><span class="p">:</span> <span class="s1">'${username}'</span><span class="p">,</span>
     <span class="na">password</span><span class="p">:</span> <span class="s1">'${password}'</span>
   <span class="p">}).</span><span class="nx">done</span><span class="p">(</span><span class="kd">function</span> <span class="p">(</span><span class="nx">res</span><span class="p">)</span> <span class="p">{</span>
@@ -338,6 +328,8 @@ TODO</p>
    <span class="nx">console</span><span class="p">.</span><span class="nx">warn</span><span class="p">(</span><span class="nx">response</span><span class="p">.</span><span class="nx">access_token</span><span class="p">)</span>
 <span class="p">})</span>
 
+</code></pre><pre class="highlight ruby tab-ruby"><code>
+</code></pre><pre class="highlight python tab-python"><code>
 </code></pre>
 <blockquote>
 <p>The above command returns JSON structured like this:</p>
@@ -410,7 +402,6 @@ TODO</p>
       </div>
       <div class="dark-box">
           <div class="lang-selector">
-                <a href="#" data-language-name="shell">shell</a>
                 <a href="#" data-language-name="ruby">ruby</a>
                 <a href="#" data-language-name="python">python</a>
                 <a href="#" data-language-name="javascript">javascript</a>
